# staxis

./: .audit-findings.md  .deploy-trigger  .env.local.example  .fuse_hidden00003bea00000001  .fuse_hidden0000478b00000002  .gitignore  .merge-anim-test  .merge-anim-test-2  ASSIGNMENT_UI_CHECKLIST.md  ASSIGNMENT_UI_QUICK_REF.md  ASSIGNMENT_UI_SUMMARY.md  ASSIGNMENT_UI_VISUAL.md  AUDIT_GAP_ANALYSIS.md  AUDIT_LOG.md  FAILSAFES.md  HOUSEKEEPER_MOBILE_COMPARISON.md  HOUSEKEEPING_FEATURES.md  HOUSEKEEPING_ML_LOG.md  INVENTORY_ML_LOG.md  ML_BUILD_CHECKLIST.md  README.md  RUNBOOKS.md  STAGED_INVENTORY_MIGRATIONS.md  eslint.config.js  firestore.indexes.json  firestore.rules  next.config.ts  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json  vercel.json
ml-service/: .env.example  .gitignore  COMPETITOR_ML_COMPARISON.md  Dockerfile  QUICK_START.md  README.md  fly.toml  openapi.json  pyproject.toml  requirements.txt
ml-service/scripts/: __init__.py  backtest_housekeeping.py  dump_openapi.py  hk_demand_backtest_synth.py  hk_sanity_harness.py  inventory_offline_eval.py
ml-service/src/: __init__.py  actuals.py  advisory_lock.py  auth.py  config.py  errors.py  health.py  log_scrub.py  main.py  sentry_init.py  storage.py  supabase_client.py
ml-service/tests/: __init__.py  conftest.py  test_activation_streak_distinctness.py  test_actuals_backfill.py  test_advisory_lock.py  test_audit_regression_2026_04_30.py  test_backtest_is_read_only.py  test_backtest_refuses_insufficient_fitted_data.py  (+55 more)
(+3172 files in other folders)
