[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "staxis-ml-service"
version = "0.1.0"
description = "Housekeeping demand/supply/optimizer ML service for Staxis"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "C90"]
ignore = []

[tool.ruff.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
